@@ -1173,6 +1173,10 @@ sprite{ id = "menus/pause/map/world/world_map_cursor", description = "World map 
 sprite{ id = "menus/pause/map/world/world_map_hero", description = "World map hero head" }
 sprite{ id = "menus/pause/options/command_cursor", description = "Command cursor" }
 sprite{ id = "menus/pause/options/cursor", description = "Options cursor" }
+sprite{ id = "menus/pause/pause_cursor", description = "Pause cursor" }
+sprite{ id = "menus/pause/pause_menu_options_command_cursor", description = "menus/pause/pause_menu_options_command_cursor" }
+sprite{ id = "menus/pause/pause_menu_options_cursor", description = "menus/pause/pause_menu_options_cursor" }
+sprite{ id = "menus/pause/pause_save_dialog", description = "menus/pause/pause_save_dialog" }
 sprite{ id = "menus/selection_menu_cursor", description = "Savegame cursor" }
 sprite{ id = "menus/solarus_logo", description = "Solarus logo" }
 sprite{ id = "menus/team_logo", description = "Solarus Team logo" }
