@@ -33,7 +33,7 @@ function options_submenu:on_started()
     text_key = "selection_menu.options.video_mode",
     color = self.text_color,
   }
-  self.shader_effect_label_text:set_xy(center_x - 50, center_y - 55)
+  self.shader_effect_label_text:set_xy(center_x - 42, center_y - 55)
 
   self.shader_effect_text = sol.text_surface.create{
     horizontal_alignment = "center",
@@ -43,7 +43,7 @@ function options_submenu:on_started()
     text = sol.video.get_shader(),
     color = self.text_color,
   }
-  self.shader_effect_text:set_xy(center_x + 74, center_y - 55)
+  self.shader_effect_text:set_xy(center_x + 72, center_y - 55)
 
   self:load_video_mode_texts()
 
@@ -55,7 +55,7 @@ function options_submenu:on_started()
     text_key = "options.commands_column",
     color = self.column_color,
   }
-  self.command_column_text:set_xy(center_x - 76, center_y - 37)
+  self.command_column_text:set_xy(center_x - 73, center_y - 32)
 
   self.keyboard_column_text = sol.text_surface.create{
     horizontal_alignment = "center",
@@ -65,7 +65,7 @@ function options_submenu:on_started()
     text_key = "options.keyboard_column",
     color = self.column_color,
   }
-  self.keyboard_column_text:set_xy(center_x - 7, center_y - 37)
+  self.keyboard_column_text:set_xy(center_x - 4, center_y - 32)
 
   self.joypad_column_text = sol.text_surface.create{
     horizontal_alignment = "center",
@@ -75,7 +75,7 @@ function options_submenu:on_started()
     text_key = "options.joypad_column",
     color = self.column_color,
   }
-  self.joypad_column_text:set_xy(center_x + 69, center_y - 37)
+  self.joypad_column_text:set_xy(center_x + 68, center_y - 32)
 
   self.commands_surface = sol.surface.create(215, 160)
   self.commands_surface:set_xy(center_x - 107, center_y - 18)
@@ -154,8 +154,8 @@ function options_submenu:load_command_texts()
 
     local y = 16 * i - 14
     self.command_texts[i]:draw(self.commands_surface, 4, y)
-    self.keyboard_texts[i]:draw(self.commands_surface, 74, y)
-    self.joypad_texts[i]:draw(self.commands_surface, 143, y)
+    self.keyboard_texts[i]:draw(self.commands_surface, 75, y)
+    self.joypad_texts[i]:draw(self.commands_surface, 146, y)
   end
 end
 
@@ -168,7 +168,7 @@ function options_submenu:set_cursor_position(position)
     self.cursor_position = position
     if position == 1 then  -- Video mode.
       self:set_caption_key("options.caption.press_action_change_mode")
-      self.cursor_sprite.x = width / 2 + 78
+      self.cursor_sprite.x = width / 2 + 78 - 2
       self.cursor_sprite.y = height / 2 - 51
     else  -- Customization of a command.
       self:set_caption_key("options.caption.press_action_customize_key")
@@ -199,12 +199,12 @@ function options_submenu:on_draw(dst_surface)
   self:draw_caption(dst_surface)
 
   -- Text.
-  self.shader_effect_label_text:draw(dst_surface)
+  text_fx_helper:draw_text_with_stroke(dst_surface, self.shader_effect_label_text, self.column_stroke_color)
   self.shader_effect_text:draw(dst_surface)
   text_fx_helper:draw_text_with_stroke(dst_surface, self.command_column_text, self.column_stroke_color)
   text_fx_helper:draw_text_with_stroke(dst_surface, self.keyboard_column_text, self.column_stroke_color)
   text_fx_helper:draw_text_with_stroke(dst_surface, self.joypad_column_text, self.column_stroke_color)
-  self.commands_surface:draw_region(0, self.commands_visible_y, 215, 84, dst_surface)
+  self.commands_surface:draw_region(0, self.commands_visible_y, 208, 84, dst_surface)
   
   -- Arrows.
   if self.commands_visible_y > 0 then
@@ -221,8 +221,8 @@ function options_submenu:on_draw(dst_surface)
   if self.save_dialog_state == 0 then
     if self.waiting_for_command then
       -- Cursor when waiting for a command, in both cells (keyboard and joypad).
-      self.command_cursor_sprite:draw(dst_surface, self.cursor_sprite.x + 64, self.cursor_sprite.y)
-      self.command_cursor_sprite:draw(dst_surface, self.cursor_sprite.x + 138, self.cursor_sprite.y)
+      self.command_cursor_sprite:draw(dst_surface, self.cursor_sprite.x + 65, self.cursor_sprite.y)
+      self.command_cursor_sprite:draw(dst_surface, self.cursor_sprite.x + 141, self.cursor_sprite.y)
     else
       -- Normal cursor.
       self.cursor_sprite:draw(dst_surface, self.cursor_sprite.x, self.cursor_sprite.y)
