@@ -413,6 +413,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Replaced the parchment font by "capital" (#184).
 	CHG: Player names can now have up to 8 characters.
 	CHG: Allowed the scrollable map to be panned farther.
+	CHG: Changed the colour of the options menu cursor to match the other submenus.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
